@@ -3,9 +3,12 @@ import javax.swing.border.LineBorder;
 import java.awt.*;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Date;
+import java.time.LocalDate;
+import java.time.Period;
+import java.time.ZoneId;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 public class Hilfsklasse {
     public static String[] faecher = {"Mathematik", "Physik", "Informatik", "Chemie", "Biologie", "Politik", "Geschichte", "Erdkunde", "Religion", "Deutsch", "Englisch", "Latein", "Französisch", "Spanisch", "Kunst", "Musik", "Sport"};
@@ -35,8 +38,8 @@ public class Hilfsklasse {
     public static void markiere_label(Container cp, String name, Color farbe) {
         Component[] k = cp.getComponents();
         for (int i = 0; i < k.length; i++) {
-            if (Arrays.stream(k).toList().get(i).getName() == name && Arrays.stream(k).toList().get(i) instanceof JLabel) {
-                ((JLabel) Arrays.stream(k).toList().get(i)).setBorder(new LineBorder(farbe));
+            if (Arrays.stream(k).collect(Collectors.toList()).get(i).getName() == name && Arrays.stream(k).collect(Collectors.toList()).get(i) instanceof JLabel) {
+                ((JLabel) Arrays.stream(k).collect(Collectors.toList()).get(i)).setBorder(new LineBorder(farbe));
             }
         }
     }
@@ -59,23 +62,95 @@ public class Hilfsklasse {
         return 100;
     }
 
-    public static int altersunterschied(String _geburtstag_1, String _geburtstag_2) {
-        //Fremdcode inspiration bei https://www.baeldung.com/java-date-difference
-        int abstand = 0;
+    public static Date geburtstag_aus_datum(String datum) {
         SimpleDateFormat datumsformat = new SimpleDateFormat("yyyy-MM-dd");
+        Date geburtstag = null;
         try {
-            Date geburtstag_1 = datumsformat.parse(_geburtstag_1);
-            Date geburtstag_2 = datumsformat.parse(_geburtstag_2);
-            abstand = (int) TimeUnit.DAYS.convert(Math.abs(geburtstag_1.getTime() - geburtstag_2.getTime()), TimeUnit.MILLISECONDS);
+            geburtstag = datumsformat.parse(datum);
         } catch (ParseException e) {
             throw new RuntimeException(e);
         }
-        return abstand;
+        return geburtstag;
     }
+
+    public static int altersunterschied(String geburtstag_1, String geburtstag_2) {
+        //Fremdcode inspiration bei https://www.baeldung.com/java-date-difference
+        return (int) TimeUnit.DAYS.convert(Math.abs(geburtstag_aus_datum(geburtstag_1).getTime() - geburtstag_aus_datum(geburtstag_2).getTime()), TimeUnit.MILLISECONDS);
+    }
+
     public static boolean prozentuelle_auswahl(int prozent) {
         //bei jedem Methodenaufruf wird zu prozent% true zurückgegeben
         int zufallszahl = (int) (Math.random() * ((100-1)+ 1)) + 1; //erzeugt zufallszahl zwischen 1 und 100
         if (zufallszahl <= prozent) return true; //zu prozent% der Fälle ist dies Wahr
         return false;
+    }
+
+    public static int generiere_neue_id(String tabelle) {
+        //generiert laufende Nummer für ID (wenn es eine vorhandene ID gibt, wird die höchste ID+1 ausgegeben)
+        //falls die ID kein Integer ist, wird eine eigene ID erzeugt, welche der Anzahl der Datensätze entspricht
+        int max_id = 0;
+
+        //hier werden Tabellennamen und Anzahl der Datensätze der gesuchten Tabelle abgefragt
+        String sql = "SELECT * FROM " + tabelle;
+        String[][] ergebnis = Benutzeroberflaeche.myDBManager.sqlAnfrageAusfuehren(sql);
+        String[] tabellennamen = ergebnis[0];
+        int laenge = ergebnis.length-1; //Länge der Tabelle wird später genutzt, falls die ID kein Int ist.
+
+        //hier werden die Tabellennamen durchgegangen und geguckt, ob sie das Stichwort "ID" enthalten, da einige Tabellen nicht nur "ID" als Tabellennamen haben, sondern vielmehr eine Kombination
+        for (int i=0; i<tabellennamen.length; i++) {
+            if (tabellennamen[i].contains("ID") || tabellennamen[i].contains("id") || tabellennamen[i].contains("Id")) {
+                sql = "SELECT MAX(" + tabellennamen[i] + ") FROM " + tabelle;
+                ergebnis = Benutzeroberflaeche.myDBManager.sqlAnfrageAusfuehren(sql);
+                if (ergebnis.length > 1) {
+                    try { //try-catch wird benutzt, um zu gucken, ob es sich wirklich um einen Int handelt (Integer.parseInt wirft eine Fehlermeldung anderenfalls)
+                        max_id = Integer.parseInt(ergebnis[1][0]);
+                    }
+                    catch (Exception e) {
+                        System.out.println("Warning: " + e);
+                        max_id = laenge; //falls es keinen Int als ID gibt, wird provisorisch die Länge der Tabelle genommen
+                    }
+                }
+                else {
+                    max_id = -1; //falls die Datenbank leer ist, wird die erste ID 0 sein. Da am Ende +1 gerechnet wird, muss hier die ID -1 sein
+                }
+                break;
+            }
+        }
+        return max_id+1;
+    }
+
+    public static String benutzerdaten_als_text(String id, boolean ist_schueler) {
+        String ausgangstext = "";
+        if (ist_schueler) {
+            String sql = "SELECT * FROM schueler WHERE ID_Nummer = '" + id + "'";
+            String[][] ergebnis = Benutzeroberflaeche.myDBManager.sqlAnfrageAusfuehren(sql);
+            String alter = Period.between(Hilfsklasse.geburtstag_aus_datum(ergebnis[1][3]).toInstant().atZone(ZoneId.systemDefault()).toLocalDate(), LocalDate.now()).getYears() + "";
+            String groesse = ergebnis[1][11];
+
+            String buchstabe = "";
+            String geschlecht = "";
+            String pronomen = "";
+            switch (ergebnis[1][6]) {
+                case "m": pronomen = "Er"; geschlecht = "mann"; break;
+                case "w": pronomen = "Sie"; geschlecht = "frau"; buchstabe = "e"; break;
+            }
+            ausgangstext = "Dein" + buchstabe + " Traum" + geschlecht + " ist " + ergebnis[1][2] + " " + ergebnis[1][1] + ".\n" + pronomen + " ist " + alter + " Jahre alt und " + groesse + "m groß!";
+        }
+        else {
+            String sql = "SELECT * FROM benutzer WHERE ID = '" + id + "'";
+            String[][] ergebnis = Benutzeroberflaeche.myDBManager.sqlAnfrageAusfuehren(sql);
+            String alter = Period.between(Hilfsklasse.geburtstag_aus_datum(ergebnis[1][6]).toInstant().atZone(ZoneId.systemDefault()).toLocalDate(), LocalDate.now()).getYears() + "";
+            String groesse = ergebnis[1][5];
+
+            String buchstabe = "";
+            String geschlecht = "";
+            String pronomen = "";
+            switch (ergebnis[1][8]) {
+                case "m": pronomen = "Er"; geschlecht = "mann"; break;
+                case "w": pronomen = "Sie"; geschlecht = "frau"; buchstabe = "e"; break;
+            }
+            ausgangstext = "Dein" + buchstabe + " Traum" + geschlecht + " ist " + ergebnis[1][1] + ".\n" + pronomen + " ist " + alter + " Jahre alt und " + groesse + "m groß!";
+        }
+        return ausgangstext;
     }
 }
